--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@
 		<div class="square"></div>
 		<div class="square"></div>
 	</div>
-	<script src="JS/colorgameproj.js" type="text/javascript"></script>
+	<script src="colorgameproj.js" type="text/javascript"></script>
 </body>
 </html>
